@@ -1,3 +1,11 @@
+2015-04-06  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* compress.c (get_uncompressed_size): Removed.
+	(bfd_compress_section_contents): Use bfd_putb64 to write
+	uncompressed section size.
+	(bfd_init_section_decompress_status): Replace
+	get_uncompressed_size with bfd_getb64.
+
 2015-04-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elf.c (_bfd_elf_init_private_section_data): Also preserve the
